--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,11 @@
     <title>Webpack Starter Kit</title>
   </head>
 
-  <body>
+  <body class="back-row-toggle splat-toggle">
+    <div class="rain front-row"></div>
+    <div class="rain back-row"></div>
    <input type="text" data-action="search">
    <div class="root"></div>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
   </body>
 </html>
